# simple-media-server

./: .gitignore  CMakeLists.txt  GB28181_SIP_测试指南.md  README.md  RTMP流创建功能测试指南.md  WEBUI_DEMO.md  api_tasks.md  gb28181Sip.cpp  main.cpp  prompts.md  setup-vnc-desktop.sh
Base/: CMakeLists.txt  Makefile  cmake_install.cmake
Base/EventPoller/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  EventLoopPool.cpp  EventLoopPool.h  PipeWrap.cpp  PipeWrap.h  SrtEventLoop.cpp  SrtEventLoop.h  Timer.cpp  Timer.h  UringLoop.cpp  UringLoop.h  sockutil.cpp  sockutil.h  uv_errno.cpp  uv_errno.h
Base/Log/: Logger.cpp  Logger.h  LoggerChannel.cpp  LoggerChannel.h  LoggerStream.cpp  LoggerStream.h  LoggerWriter.cpp  LoggerWriter.h
Base/Net/: Address.cpp  Address.h  Buffer.cpp  Buffer.h  CMakeLists.txt  DnsCache.cpp  DnsCache.h  Socket.cpp  Socket.cpp.bak  Socket.h  Socket.h.bak  SrtSocket.cpp  SrtSocket.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
Base/ReadWriteQueue/: atomicops.h
Base/Ssl/: HmacSHA1.cpp  HmacSHA1.h  SHA1.cpp  SHA1.h  TlsContext.cpp  TlsContext.h
Base/Tests/: CMakeLists.txt  test_tcpClient.cpp  test_tcpEchoServer.cpp  test_udpSock.cpp
Base/Util/: Base64.cpp  Base64.h  CRC32.cpp  CRC32.h  File.cpp  File.h  MD5.cpp  MD5.h  MinHeap.h  Path.cpp  Path.h  String.cpp  String.h  String.hpp  Thread.cpp  Thread.h  TimeClock.cpp  TimeClock.h  Util.cpp  Util.h  Variant.cpp  Variant.h  Wepoll.cpp  Wepoll.h  noncopyable.h  semaphore.h
Base/WorkPoller/: WorkLoop.cpp  WorkLoop.h  WorkLoopPool.cpp  WorkLoopPool.h
GB28181SIP/: CMakeLists.txt  GB28181Channel.cpp  GB28181Channel.h  GB28181Client.cpp  GB28181Client.h  GB28181DeviceManager.cpp  GB28181DeviceManager.h  GB28181Hook.cpp  GB28181Hook.h  GB28181SIPApi.cpp  GB28181SIPApi.h  GB28181SIPConnection.cpp  GB28181SIPConnection.h  GB28181SIPContext.cpp  GB28181SIPContext.h  GB28181SIPManager.cpp  GB28181SIPManager.h  GB28181SIPParser.cpp  GB28181SIPParser.h  GB28181SIPServer.cpp  GB28181SIPServer.h  GB28181TcpClient.cpp  GB28181TcpClient.h  GB28181UdpClient.cpp  GB28181UdpClient.h  Heartbeat.cpp  Heartbeat.h  SipMessage.cpp  SipMessage.h  SipServerStructs.h  Utils.cpp  Utils.h  XmlParser.cpp  XmlParser.h
ManagerServer/: CMakeLists.txt  wvp.sql
ManagerServer/Common/: ApiUtil.cpp  ApiUtil.h  Config.cpp  Config.h  Define.h  PortManager.cpp  PortManager.h  UrlParser.cpp  UrlParser.h
ManagerServer/Http/: HttpChunkedParser.cpp  HttpChunkedParser.h  HttpClient.cpp  HttpClient.h  HttpClientApi.cpp  HttpClientApi.h  HttpConnection.cpp  HttpConnection.h  HttpFile.cpp  HttpFile.h  HttpParser.cpp  HttpParser.h  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpUtil.h
ManagerServer/HttpApi/: DownDeviceManagerApi.cpp  DownDeviceManagerApi.h  DownStreamApi.cpp  DownStreamApi.h  MediaServerApi.cpp  MediaServerApi.h  RecordApi.cpp  RecordApi.h  SignalServerApi.cpp  SignalServerApi.h  UserApi.cpp  UserApi.h
ManagerServer/Manager/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  SMSServer.cpp  SMSServer.h  SipServer.cpp  SipServer.h  StreamManager.cpp  StreamManager.h
Src/: CMakeLists.txt  Makefile  cmake_install.cmake
Src/Api/: AdminWebsocketApi.cpp  AdminWebsocketApi.h  ApiUtil.cpp  ApiUtil.h  BatchOperationApi.cpp  BatchOperationApi.h  ConfigTemplateApi.cpp  ConfigTemplateApi.h  Ehome2Api.cpp  Ehome2Api.h  FfmpegApi.cpp  FfmpegApi.h  GB28181Api.cpp  GB28181Api.h  HookApi.cpp  HookApi.h  HttpApi.cpp  HttpApi.h  HttpStreamApi.cpp  HttpStreamApi.h  JT1078Api.cpp  JT1078Api.h  JT808Api.cpp  JT808Api.h  RecordApi.cpp  RecordApi.h  RtmpApi.cpp  RtmpApi.h  RtpApi.cpp  RtpApi.h  RtspApi.cpp  RtspApi.h  SrtApi.cpp  SrtApi.h  TestApi.cpp  TestApi.h  VodApi.cpp  VodApi.h  WebrtcApi.cpp  WebrtcApi.h  (+2 more)
Src/Codec/: AV1Frame.cpp  AV1Frame.h  AV1Track.cpp  AV1Track.h  AacFrame.cpp  AacFrame.h  AacTrack.cpp  AacTrack.h  AdpcmaTrack.cpp  AdpcmaTrack.h  G711Track.cpp  G711Track.h  H264Frame.cpp  H264Frame.h  H264Nal.cpp  H264Nal.h  H264Track.cpp  H264Track.h  H265Frame.cpp  H265Frame.h  H265Track.cpp  H265Track.h  H266Frame.cpp  H266Frame.h  H266Track.cpp  H266Track.h  Mp3Track.cpp  Mp3Track.h  NalBitstream.h  OpusTrack.cpp  OpusTrack.h  VP8Frame.cpp  VP8Frame.h  VP8Track.cpp  VP8Track.h  VP9Frame.cpp  VP9Frame.h  VP9Track.cpp  VP9Track.h
Src/Common/: ApiResponse.h  ApiUtil.cpp  ApiUtil.h  Config.cpp  Config.h  DataQue.h  Define.h  DtsGenerator.cpp  DtsGenerator.h  ErrorCodes.cpp  ErrorCodes.h  Frame.cpp  Frame.h  FrameMediaSource.cpp  FrameMediaSource.h  Heartbeat.cpp  Heartbeat.h  HookManager.cpp  HookManager.h  MediaClient.cpp  MediaClient.h  MediaSource.cpp  MediaSource.h  PortManager.cpp  PortManager.h  RecordReader.cpp  RecordReader.h  RecordReaderBase.cpp  RecordReaderBase.h  StampAdjust.cpp  StampAdjust.h  Track.cpp  Track.h  UrlParser.cpp  UrlParser.h
Src/Ehome2/: Ehome2Connection.cpp  Ehome2Connection.h  Ehome2Parser.cpp  Ehome2Parser.h  Ehome2Server.cpp  Ehome2Server.h  Ehome2VodConnection.cpp  Ehome2VodConnection.h  Ehome2VodServer.cpp  Ehome2VodServer.h
Src/Ehome5/: Ehome5Connection.cpp  Ehome5Connection.h  Ehome5Parser.cpp  Ehome5Parser.h  Ehome5Server.cpp  Ehome5Server.h
Src/Ffmpeg/: Transcode.cpp  Transcode.h  TranscodeAudio.cpp  TranscodeAudio.h  TranscodeTask.cpp  TranscodeTask.h  TranscodeVideo.cpp  TranscodeVideo.h  VideoStack.cpp  VideoStack.h
Src/Flv/: FlvDemuxer.cpp  FlvDemuxer.h  FlvFileWriter.cpp  FlvFileWriter.h  FlvMuxer.cpp  FlvMuxer.h
Src/GB28181/: GB28181Client.cpp  GB28181Client.h  GB28181ClientPull.cpp  GB28181ClientPull.h  GB28181ClientPush.cpp  GB28181ClientPush.h  GB28181Connection.cpp  GB28181Connection.h  GB28181ConnectionSend.cpp  GB28181ConnectionSend.h  GB28181Context.cpp  GB28181Context.h  GB28181DecodeTrack.cpp  GB28181DecodeTrack.h  GB28181EncodeTrack.cpp  GB28181EncodeTrack.h  GB28181Manager.cpp  GB28181Manager.h  GB28181MediaSource.cpp  GB28181MediaSource.h  GB28181Parser.cpp  GB28181Parser.h  GB28181Server.cpp  GB28181Server.h
Src/GB28181SIP/: GB28181Client.cpp  GB28181Client.h  GB28181TcpClient.cpp  GB28181TcpClient.h  GB28181UdpClient.cpp  (+4 more)
(+647 files in other folders)
